--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <title>SustainabilityReportFE</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://www.eni.com/content/dam/enicom/images/loghi/logoEni.svg">
 </head>
-<body>
+<body style="background-color: #222;">
   <app-root></app-root>
 </body>
 </html>
